--- a/user-auth/package.json
+++ b/user-auth/package.json
@@ -11,8 +11,8 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/user-auth/src/main",
-    "main":"dist/user-auth/src/main.js",
+    "start:prod": "node dist/main",
+    "main":"dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}//*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
