--- a/palletsplus/package.json
+++ b/palletsplus/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "next": "14.2.3",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18"
   },
   "devDependencies": {
