--- a/user-auth/package.json
+++ b/user-auth/package.json
@@ -12,7 +12,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "main":"dist/main.js",
+    "main": "dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}//*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.3.4",
     "nodemailer": "^6.9.13",
