Done customize product; view all products, product dtails, rent starter

--- a/palletsplus/jsconfig.json
+++ b/palletsplus/jsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@app/*": ["./src/app/*"] // Add this line to include the 'app' folder
     }
   }
 }
