--- a/product/package.json
+++ b/product/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.3.4",
     "reflect-metadata": "^0.2.0",
