--- a/user-auth/package.json
+++ b/user-auth/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.3.8",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/microservices": "^10.3.8",
@@ -30,6 +31,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.3.4",
     "nodemailer": "^6.9.13",
